--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
       </head>
       <body>
       <h1>Hello Express.js!</h1>
+      <p>Welcome to my NodeJS Application</p>
       </body>
   </html>
